--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ReviewJujur.NoActionBar">
-        <activity android:name=".main.ChooseLocationActivity"></activity>
+        <activity android:name=".main.GroupedBusinessesActivity"></activity>
+        <activity android:name=".main.ChooseLocationActivity" />
         <activity android:name=".main.HomeActivity" />
         <activity android:name=".authentication.NewPasswordActivity" />
         <activity android:name=".authentication.CodeVerificationActivity" />
