--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.budiyev.android:code-scanner:2.1.0'
 }
