--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="id.sireto.reviewjujur">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ReviewJujur.NoActionBar">
-        <activity android:name=".main.GroupedBusinessesActivity"></activity>
+        <activity
+            android:exported="true"
+            android:name=".main.reviews.CreateReviewActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+                <category android:name="android.intent.category.BROWSABLE"/>
+                <data android:scheme="app" android:host="id.sireto.reviewjujur"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".main.scan.ScanActivity" />
+        <activity android:name=".main.business.BusinessDetailsActivity" />
+        <activity android:name=".main.GroupedBusinessesActivity" />
         <activity android:name=".main.ChooseLocationActivity" />
         <activity android:name=".main.HomeActivity" />
         <activity android:name=".authentication.NewPasswordActivity" />
