--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,4 +77,6 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.budiyev.android:code-scanner:2.1.0'
+
+    implementation "io.reactivex.rxjava2:rxjava:2.1.14"
 }
